Add placements and the ability to retrieve one using UUID
Introduce the use of UUID. When asking the scheduler for a cloud using the
/api/v1/schedule endpoint, the uuid of the service in cloudforms (or babylon)
must be passed.

That uuid will then be used later to retrieve the placement, for example, when
destroying the service.

This commit, if applied, make the following changes:
- Add a new type, Placement
- UUID is now mandatory for the /api/v1/schedule POST endpoint
- change the response for schedule from Cloud to Placement
- Add a new API endpoint /api/v1/placements to interact with placements
  - Get all
  - Get one using uuid
  - Delete one using uuid
- Change HTTP Header 'Content-Type' to 'application/json' in all handlers
- Use json.NewEncoder instead of manual Marshal, more readable and easier to use
- git package: Add new error type: ErrUpdatedTooRecently. Used to avoid pulling
  the repo too frequently
